name:                querschlaeger
version:             0.1.0.0
synopsis:            Ricochet client based on ricochet-haskell
license:             GPL-3
license-file:        LICENSE
author:              ricochet-haskell team
maintainer:          git@lukasepple.de
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable querschlaeger
  main-is:             Main.hs
  build-depends:       base
  hs-source-dirs:      src
  default-language:    Haskell2010
